@@ -111,8 +111,11 @@ class ShardLeaderElectionContextBase extends ElectionContext {
   protected String shardId;
   protected String collection;
   protected LeaderElector leaderElector;
-  protected volatile Integer leaderZkNodeParentVersion;
-  
+  private Integer leaderZkNodeParentVersion;
+
+  // Prevents a race between cancelling and becoming leader.
+  private final Object lock = new Object();
+
   public ShardLeaderElectionContextBase(LeaderElector leaderElector,
       final String shardId, final String collection, final String coreNodeName,
       ZkNodeProps props, ZkStateReader zkStateReader) {
@@ -139,31 +142,33 @@ class ShardLeaderElectionContextBase extends ElectionContext {
   @Override
   public void cancelElection() throws InterruptedException, KeeperException {
     super.cancelElection();
-    if (leaderZkNodeParentVersion != null) {
-      try {
-        // We need to be careful and make sure we *only* delete our own leader registration node.
-        // We do this by using a multi and ensuring the parent znode of the leader registration node
-        // matches the version we expect - there is a setData call that increments the parent's znode
-        // version whenever a leader registers.
-        log.info("Removing leader registration node on cancel: {} {}", leaderPath, leaderZkNodeParentVersion);
-        List<Op> ops = new ArrayList<>(2);
-        ops.add(Op.check(new Path(leaderPath).getParent().toString(), leaderZkNodeParentVersion));
-        ops.add(Op.delete(leaderPath, -1));
-        zkClient.multi(ops, true);
-      } catch (KeeperException.NoNodeException nne) {
-        // no problem
-        log.info("No leader registration node found to remove: {}", leaderPath);
-      } catch (KeeperException.BadVersionException bve) {
-        log.info("Cannot remove leader registration node because the current registered node is not ours: {}", leaderPath);
-        // no problem
-      } catch (InterruptedException e) {
-        throw e;
-      } catch (Exception e) {
-        SolrException.log(log, e);
+    synchronized (lock) {
+      if (leaderZkNodeParentVersion != null) {
+        try {
+          // We need to be careful and make sure we *only* delete our own leader registration node.
+          // We do this by using a multi and ensuring the parent znode of the leader registration node
+          // matches the version we expect - there is a setData call that increments the parent's znode
+          // version whenever a leader registers.
+          log.info("Removing leader registration node on cancel: {} {}", leaderPath, leaderZkNodeParentVersion);
+          List<Op> ops = new ArrayList<>(2);
+          ops.add(Op.check(new Path(leaderPath).getParent().toString(), leaderZkNodeParentVersion));
+          ops.add(Op.delete(leaderPath, -1));
+          zkClient.multi(ops, true);
+        } catch (KeeperException.NoNodeException nne) {
+          // no problem
+          log.info("No leader registration node found to remove: {}", leaderPath);
+        } catch (KeeperException.BadVersionException bve) {
+          log.info("Cannot remove leader registration node because the current registered node is not ours: {}", leaderPath);
+          // no problem
+        } catch (InterruptedException e) {
+          throw e;
+        } catch (Exception e) {
+          SolrException.log(log, e);
+        }
+        leaderZkNodeParentVersion = null;
+      } else {
+        log.info("No version found for ephemeral leader parent node, won't remove previous leader registration.");
       }
-      leaderZkNodeParentVersion = null;
-    } else {
-      log.info("No version found for ephemeral leader parent node, won't remove previous leader registration.");
     }
   }
   
@@ -180,31 +185,33 @@ class ShardLeaderElectionContextBase extends ElectionContext {
         
         @Override
         public void execute() throws InterruptedException, KeeperException {
-          log.info("Creating leader registration node {} after winning as {}", leaderPath, leaderSeqPath);
-          List<Op> ops = new ArrayList<>(2);
-          
-          // We use a multi operation to get the parent nodes version, which will
-          // be used to make sure we only remove our own leader registration node.
-          // The setData call used to get the parent version is also the trigger to
-          // increment the version. We also do a sanity check that our leaderSeqPath exists.
-          
-          ops.add(Op.check(leaderSeqPath, -1));
-          ops.add(Op.create(leaderPath, json, zkClient.getZkACLProvider().getACLsToAdd(leaderPath), CreateMode.EPHEMERAL));
-          // we set the json on the parent too for back compat, see SOLR-7844
-          ops.add(Op.setData(parent, json, -1));
-          List<OpResult> results;
-          
-          results = zkClient.multi(ops, true);
-          
-          for (OpResult result : results) {
-            if (result.getType() == ZooDefs.OpCode.setData) {
-              SetDataResult dresult = (SetDataResult) result;
-              Stat stat = dresult.getStat();
-              leaderZkNodeParentVersion = stat.getVersion();
-              return;
+          synchronized (lock) {
+            log.info("Creating leader registration node {} after winning as {}", leaderPath, leaderSeqPath);
+            List<Op> ops = new ArrayList<>(2);
+
+            // We use a multi operation to get the parent nodes version, which will
+            // be used to make sure we only remove our own leader registration node.
+            // The setData call used to get the parent version is also the trigger to
+            // increment the version. We also do a sanity check that our leaderSeqPath exists.
+
+            ops.add(Op.check(leaderSeqPath, -1));
+            ops.add(Op.create(leaderPath, json, zkClient.getZkACLProvider().getACLsToAdd(leaderPath), CreateMode.EPHEMERAL));
+            // we set the json on the parent too for back compat, see SOLR-7844
+            ops.add(Op.setData(parent, json, -1));
+            List<OpResult> results;
+
+            results = zkClient.multi(ops, true);
+
+            for (OpResult result : results) {
+              if (result.getType() == ZooDefs.OpCode.setData) {
+                SetDataResult dresult = (SetDataResult) result;
+                Stat stat = dresult.getStat();
+                leaderZkNodeParentVersion = stat.getVersion();
+                return;
+              }
             }
+            assert leaderZkNodeParentVersion != null;
           }
-          assert leaderZkNodeParentVersion != null;
         }
       });
     } catch (Throwable t) {
@@ -227,7 +234,13 @@ class ShardLeaderElectionContextBase extends ElectionContext {
 
   public LeaderElector getLeaderElector() {
     return leaderElector;
-  }  
+  }
+
+  Integer getLeaderZkNodeParentVersion() {
+    synchronized (lock) {
+      return leaderZkNodeParentVersion;
+    }
+  }
 }
 
 // add core container and stop passing core around...
